# visde

./: LICENSE  README.md  environment.yml  pyproject.toml
experiments/flowcontrol_2d/: def_model.py  make_animation.py  plot_data.py  plot_error_visde.py  plot_forcing.py  postproc_visde.py  test_pca.py  train_autoenc.py  train_visde.py
experiments/forced_burgers_1d/: def_model.py  gen_data.py  make_animation.py  plot_error_visde.py  plot_state_error_visde.py  postproc_node.py  postproc_nsde.py  postproc_visde.py  test_pca.py  train_autoenc.py  train_node.py  train_nsde.py  train_visde.py
experiments/reaction_diffusion_2d/: def_model.py  gen_data.py  make_animation.py  plot_error_visde.py  postproc_visde.py  train_autoenc.py  train_visde.py
tests/: test_autoencoder.py  test_data.py  test_kernel.py  test_sde.py  test_sdeprior.py  test_sdevar.py
visde/: __init__.py  autoencoder.py  data.py  kernel.py  likelihood.py  sde.py  sdeprior.py  sdevar.py  utils.py
